# device_control

./: README.md  pyproject.toml
src/device_control/: __init__.py
src/device_control/kikusui/: __init__.py  kxs.py  web.py
src/device_control/mho98/: __init__.py  acquisition.py  cli.py  storage.py  viewer.py  web.py
src/device_control/protocol/: __init__.py  ieee488.py  scpi.py  serial_line.py
src/device_control/tektronix/: __init__.py
src/device_control/tektronix/afg1062/: __init__.py  cli.py  driver.py  web.py
src/device_control/tektronix/mdo3034/: __init__.py  cli.py  driver.py  web.py
src/device_control/util/: __init__.py  scpi_query.py  usb.py
src/device_control/webui/: __init__.py  templates.py
